--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">My to do list</string>
     <string name="connexion">Connexion</string>
+    <string name="sign_up">Sign up</string>
+    <string name="create_account_prompt">Don\'t have an account ? Create an account here</string>
 </resources>
