--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,6 +1,13 @@
 <resources>
     <string name="app_name">My to do list</string>
     <string name="connexion">Connexion</string>
-    <string name="sign_up">Inscription</string>
+    <string name="sign_up">Créer un compte</string>
+    <string name="welcome">Bienvenue</string>
+    <string name="sentenceLink">sur notre application</string>
     <string name="create_account_prompt">Vous n\'avez pas de compte ? Créer un compte ici</string>
+    <string name="success_created_account">Compte créé avec succès !</string>
+    <string name="exit">Quitter</string>
+    <string name="missing_fields">Veuillez remplir tous les champs</string>
+    <string name="wrong_mail_format">Le mail doit être dans le format exemple@exemple.com</string>
+    <string name="user_already_exists">L\'utilisateur existe déjà</string>
 </resources>
