--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,14 @@
 <resources>
     <string name="app_name">My to do list</string>
-    <string name="connexion">Connexion</string>
+    <string name="connection">Connection</string>
+    <string name="connection_title">Nice to see you again</string>
+    <string name="connection_subtitle">Be productive</string>
     <string name="sign_up">Create an account</string>
     <string name="welcome">Welcome</string>
-    <string name="sentenceLink">on our application</string>
+    <string name="sentence_link">on our application</string>
     <string name="create_account_prompt">Don\'t have an account ? Create an account here</string>
     <string name="success_created_account">Successfully created account !</string>
+    <string name="success_connection">Successfully connection !</string>
     <string name="exit">Exit</string>
     <string name="missing_fields">Please complete all fields</string>
     <string name="wrong_mail_format">The mail must be in format example@example.com</string>
