add upd et del for tasks

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -15,4 +15,6 @@
     <string name="user_already_exists">User already exists</string>
     <string name="logout">Logout</string>
     <string name="titleLocalTodoActivity">My local todolists</string>
+    <string name="modify">Modify</string>
+    <string name="delete">Delete</string>
 </resources>
