--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -15,4 +15,6 @@
     <string name="user_already_exists">L\'utilisateur existe déjà</string>
     <string name="logout">Déconnexion</string>
     <string name="titleLocalTodoActivity">Mes todolists locales</string>
+    <string name="modify">Modifier</string>
+    <string name="delete">Supprimer</string>
 </resources>
