--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -14,7 +14,7 @@
     <string name="wrong_mail_format">The mail must be in format example@example.com</string>
     <string name="user_already_exists">User already exists</string>
     <string name="logout">Logout</string>
-    <string name="titleLocalTodoActivity">My local todolists</string>
+    <string name="titleLocalTodo">My local todolists</string>
     <string name="modify">Modify</string>
     <string name="delete">Delete</string>
     <string name="share">Share</string>
