--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -20,4 +20,5 @@
     <string name="share">Partager</string>
     <string name="titleSharedTodo">Todolists partagés</string>
     <string name="titleSharedTodoWithMe">Partagés avec moi</string>
+    <string name="user_doesnt_exist">Cet utilisateur n\'existe pas</string>
 </resources>
