--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -21,4 +21,6 @@
     <string name="titleSharedTodo">Todolists partagés</string>
     <string name="titleSharedTodoWithMe">Partagés avec moi</string>
     <string name="user_doesnt_exist">Cet utilisateur n\'existe pas</string>
+    <string name="todolist_shared">Todolist partagé !</string>
+    <string name="mail_is_your">Ceci est votre mail !</string>
 </resources>
