--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,9 @@
     <string name="user_doesnt_exist">This user doesn\'t exist</string>
     <string name="todolist_shared">Todolist shared !</string>
     <string name="mail_is_your">It is your mail !</string>
+    <string name="non_working">Non working</string>
+    <string name="quit_confirmation_message">Are you sure you want to quit ?</string>
+    <string name="yes_button">Yes</string>
+    <string name="no_button">No</string>
+    <string name="warning">Warning !</string>
 </resources>
